Session lifecycle: heartbeat + identity-owned reconnect with 180s grace
Game state is now owned by player identity (JWT), not the ephemeral socket, so
a disconnect no longer destroys the run:
- Solo runs keyed by playerId; on disconnect the run is preserved and a grace
  timer (default 180s, configurable) is scheduled. Re-auth within the window
  cancels it and the server resends the full ClientView (instant resume);
  expiry drops the run.
- Heartbeat: ping -> pong; raw-TCP sockets get a 45s read timeout (~3 missed
  15s pings) so a silently-dead client is detected and enters grace. TCP_NODELAY
  set so small intents flush immediately.
- One virtual thread per TCP connection.

SessionLifecycleTest covers ping/pong, reconnect-resume, and post-grace cleanup
over raw TCP. WS + match paths unchanged (NetworkTest/MatchTest green).

Match reconnect (rebinding a Side's connection by playerId) and the PvP speed
clock build on this; see the session-lifecycle design notes.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>